<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/inputbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/sit305_quiz_app"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/introtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="188dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="98dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/enter_name"
                android:textColor="@color/black"

                />

            <EditText
                android:id="@+id/editName"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="100dp"
                android:hint="@string/enter"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/startbutton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="115dp"
                android:onClick="clickQuiz"
                android:text="@string/start" />
        </LinearLayout>


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>